--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HatShopDbConnectionString": "Server=tcp:hatshopdb.database.windows.net,1433;Initial Catalog=HatShopDB;Persist Security Info=False;User ID=HatShopAdmin;Password=Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "HatShopDbConnectionString": "Server=tcp:hatshopdb.database.windows.net,1433;Initial Catalog=HatShopDB;Persist Security Info=False;User ID=[AdminUserId];Password=[password];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
